Add query time lookups for renames * Add ability to explicitly rename using a "namespace" which is a particular data collection that is loaded on all realtime and historic nodes * Add namespace caching and populating (can be on heap or off heap) * Add NamespaceExtractionCacheManager for handling caches * Added ExtractionNamespace for handling metadata on the extraction namespaces * Added ExtractionNamespaceUpdate for handling metadata related to updates * Updates can be one-off or regularly scheduled. There is a Zookeeper path to handle the namespace update requests (defaults to `namespaces`) * Add ability to explicitly rename with a map passed at query time * Add ability to rename using a key/value lookup in a database * Add extension which caches renames from a kafka stream (requires kafka8) * Added README.md for the dim-rename kafka extension * Added docs to Historical-Config.md and DimensionSpecs.md * Added context flag `topNFastRename` for if the user knows the data does not need rebucketing and wants to run the more optimized pool strategy. Otherwise an explicit dim extraction strategy is used which handles rebucketing of data. * Added tests to show why PooledTopnAlgorithm cannot be used  for dim extraction fn topNs * Added endpoint for namespaces for coordinator at `/druid/coordinator/v1/namespaces` * Add Versioning support via "most recently modified" to URI pullers (requires https://github.com/druid-io/druid-api/pull/40 ) * Fix closed connection leaking in S3DataSegmentPuller

--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,12 @@
         <metamx.java-util.version>0.27.0</metamx.java-util.version>
         <apache.curator.version>2.7.0</apache.curator.version>
         <jetty.version>9.2.5.v20141112</jetty.version>
-        <druid.api.version>0.3.8</druid.api.version>
+        <druid.api.version>0.3.9-SNAPSHOT</druid.api.version>
         <jackson.version>2.4.4</jackson.version>
         <log4j.version>2.2</log4j.version>
         <slf4j.version>1.7.10</slf4j.version>
         <hadoop.compile.version>2.3.0</hadoop.compile.version>
+        <derby.version>10.11.1.1</derby.version>
     </properties>
 
     <modules>
@@ -99,6 +100,7 @@
         <module>extensions/mysql-metadata-storage</module>
         <module>extensions/postgresql-metadata-storage</module>
         <module>extensions/azure-extensions</module>
+        <module>extensions/kafka-extraction-namespace</module>
     </modules>
 
     <dependencyManagement>
@@ -509,12 +511,17 @@
             <dependency>
                 <groupId>org.apache.derby</groupId>
                 <artifactId>derbynet</artifactId>
-                <version>10.11.1.1</version>
+                <version>${derby.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.derby</groupId>
                 <artifactId>derbyclient</artifactId>
-                <version>10.11.1.1</version>
+                <version>${derby.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derby</artifactId>
+                <version>${derby.version}</version>
             </dependency>
 
             <!-- Test Scope -->
